--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -19,7 +19,7 @@
 
             <mat-form-field class="example-full-width" appearance="fill" style="width: 250px;">
                 <mat-label>Телефон</mat-label>
-                <input matInput formControlName="phone_number">
+                <input matInput formControlName="phone_number" mask="0 (000) 000-00-00">
             </mat-form-field>
 
             <mat-form-field appearance="fill" style="width: 250px;">
