--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -4,7 +4,7 @@
         <div class="box">
             <mat-form-field class="example-full-width" appearance="fill" style="width: 250px;">
                 <mat-label>Введите номер телефона</mat-label>
-                <input matInput formControlName="phone_number">
+                <input matInput formControlName="phone_number" mask="0 (000) 000-00-00">
             </mat-form-field>
 
             <mat-form-field appearance="fill" style="width: 250px;">
