--- a/src/app/main/components/user-change/user-change.component.html
+++ b/src/app/main/components/user-change/user-change.component.html
@@ -19,7 +19,7 @@
 
             <mat-form-field class="example-full-width" appearance="fill" style="width: 280px;">
                 <mat-label>Телефон</mat-label>
-                <input matInput formControlName="phone_number" prefix="+7" mask="(000) 000-00-00">
+                <input matInput formControlName="phone_number">
             </mat-form-field>
 
             <div>
