--- a/src/app/main/components/add-event/add-event.component.html
+++ b/src/app/main/components/add-event/add-event.component.html
@@ -29,12 +29,12 @@
 
             <mat-form-field appearance="outline" style="width: 280px;">
                 <mat-label>Время начала события</mat-label>
-                <input formControlName="time_start" type="time" matInput name="week" min="09:00" max="18:00">
+                <input formControlName="time_start" type="time" matInput name="time_start" min="00:00" max="23:59">
             </mat-form-field>
 
             <mat-form-field appearance="outline" style="width: 280px;">
                 <mat-label>Время конца события</mat-label>
-                <input formControlName="time_end" type="time" matInput name="week" min="09:00" max="18:00">
+                <input formControlName="time_end" type="time" matInput name="time_end" min="00:00" max="23:59">
             </mat-form-field>
 
             <mat-form-field appearance="fill" style="width: 280px;">
