--- a/src/app/main/components/event/event.component.scss
+++ b/src/app/main/components/event/event.component.scss
@@ -72,6 +72,7 @@ $lightdark: #1C1C24;
     border-radius: 5px 5px 5px 0px;
     display: inline-block;
     padding: 5px 10px;
+    cursor: pointer;
 }
 .user__comment {
     font-size: 12px;
