change free team

--- a/src/app/main/components/players/players.component.html
+++ b/src/app/main/components/players/players.component.html
@@ -19,12 +19,12 @@
     <p class="title">Состав команды:</p>
     <table>
         <tr class="tr__head">
-            <td>Номер</td>
+            <td *ngIf="team.id != 1">Номер</td>
             <td>Имя</td>
             <td>Подтвержден</td>
         </tr>
         <tr class="tr" *ngFor="let player of team?.players">
-            <td [routerLink]="['./player', player.id]">{{player?.number}}</td>
+            <td *ngIf="team.id != 1" [routerLink]="['./player', player.id]">{{player?.number}}</td>
             <td [routerLink]="['./player', player.id]">{{player?.user.full_name}}</td>
             <td [routerLink]="['./player', player.id]">
                 <mat-icon style="color: #089F5F;" aria-hidden="false" aria-label="Example logout icon" *ngIf="player?.confirmed">done</mat-icon>
@@ -40,5 +40,6 @@
             </p>
         </div>
     </div>
-    <button *ngIf="aAuth" class="btn" [routerLink]="['./add-player', id]">Заявка на вступление в команду</button>
+    <button *ngIf="aAuth && team.id != 1 && !isHere" class="btn" [routerLink]="['./add-player', id]">Заявка на вступление в команду</button>
+    <button *ngIf="aAuth && team.id != 1 && isHere" class="btn" [routerLink]="['./add-player', id]">Выйти из команды</button>
 </div>
