--- a/src/app/main/components/event/event.component.html
+++ b/src/app/main/components/event/event.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <p class="title">Данные о событии</p>
     <div class="box">
-        <div>
+        <div class="box__data">
             <div>  
                 <div class="flex">
                     <p class="text__title">Статус события: </p>
@@ -35,83 +35,91 @@
                     <p class="text__title">Цена за человека: </p>
                     <p class="text__data" style="color: #089F5F;">{{event?.stats.price_per_player}}&#8381;</p>
                 </div>
-                <p class="text__title">Комментарий к событию: </p>
-                <p class="text__data">{{event?.comment}}</p>
             </div>
-    
             <div>
-                <p class="subtitle">Комментарии</p>
-                <p *ngIf="!isAuth" style="color: #788CA0; user-select: none; margin-bottom: 10px;">Чтобы написать комментарий, войдите в систему</p>
-                <form *ngIf="isAuth" [formGroup]="addCommentForm" (ngSubmit)="sendComment()">
-                    <mat-form-field appearance="fill" class="textarea">
-                        <mat-label>Введите текст</mat-label>
-                        <textarea matInput
-                                    cdkTextareaAutosize
-                                    #autosize="cdkTextareaAutosize"
-                                    cdkAutosizeMinRows="1"
-                                    cdkAutosizeMaxRows="5"
-                                    formControlName="comment"
-                                    style="color: #EEF5F8;"
-                                    [(ngModel)]="text.comment"
-                                    ></textarea>
-                    </mat-form-field>
-                    <button *ngIf="!isSend" class="icon__send" [disabled]="addCommentForm.invalid">
-                        <mat-icon style="color: #EEF5F8; margin-left: 20px;" aria-hidden="false" aria-label="Example send icon">send</mat-icon>
-                    </button>
-                    <button *ngIf="isSend" class="icon__send" type="button" (click)="sendChangeCommit()">
-                        <mat-icon style="color: #EEF5F8; margin-left: 20px;" aria-hidden="false" aria-label="Example send icon">done</mat-icon>
-                    </button>
-                    <button *ngIf="!isSend" class="btn__send" mat-raised-button>Отправить</button>
-                    <button *ngIf="isSend" class="btn__send" type="button" (click)="sendChangeCommit()" mat-raised-button>Сохранить</button>
-                </form>
-                <p class="title__comment" (click)="openComment()">
-                    <span *ngIf="!commentWindow">Открыть комментарии </span>
-                    <span *ngIf="commentWindow">Закрыть комментарии </span>
-                    <mat-icon *ngIf="!commentWindow" style="color: #EEF5F8; margin-left: 10px;" aria-hidden="false" aria-label="Example send icon">expand_more</mat-icon>
-                    <mat-icon *ngIf="commentWindow" style="color: #EEF5F8; margin-left: 10px;" aria-hidden="false" aria-label="Example send icon">expand_less</mat-icon>
-                </p>
-                <div *ngIf="commentWindow">
-                    <div *ngFor="let comment of comments?.results">
-                        <div class="box__comment" [matMenuTriggerFor]="menu" (click)="openMenu(comment)">
-                            <span class="user__comment" style="user-select: none;">{{comment.user.full_name}}</span>
-                            <p class="text__comment">{{comment.comment}} <span style="user-select: none;" class="time__comment">{{comment.created_at | date: 'HH:mm'}}</span></p>
-                        </div>
+                <p *ngIf="!isAuth" class="dangerous">Чтобы проголосовать, войдите в систему</p>
+                <div class="box__btns" *ngIf="isAuth">
+                    <button class="btn" style="background: #089F5F; margin-right: 10px;" *ngIf="answer == null" mat-raised-button (click)="sendTruePost()">Приду</button>
+                    <button class="btn" style="background: #9f0808;" *ngIf="answer == null" mat-raised-button (click)="sendFalsePost()">Не приду</button>
+    
+                    <button class="btn" style="background: #089F5F;" *ngIf="answer == false" mat-raised-button (click)="sendTruePut()">Приду</button>
+                    <button class="btn" style="background: #9f0808;" *ngIf="answer == true" mat-raised-button (click)="sendFalsePut()">Не приду</button>
+                </div>
+                <div class="box__tabs">
+                    <p class="tab" [ngClass]="{active: list.participants}" mat-raised-button (click)="viewParticipants()">Участники ({{event?.participants.confirmed.length}})</p>
+                    <p class="tab" [ngClass]="{active: list.surveys}" mat-raised-button (click)="viewSurveys()">Не придут ({{event?.surveys.unknown.length + event?.surveys.false.length}})</p>
+                    <p class="tab" [ngClass]="{active: list.guests}" mat-raised-button (click)="viewGuests()">Гости ({{event?.guests.length}})</p>
+                </div>
+
+                <div *ngIf="list.participants">
+                    <div *ngFor="let ev of event?.participants.confirmed">
+                        <p class="surveys__title">
+                            <mat-icon style="color: #089F5F;" aria-hidden="false" aria-label="Example logout icon">done</mat-icon>
+                            {{ev.player.user.full_name}}
+                        </p>
+                    </div>
+                </div>
+                <div *ngIf="list.surveys">
+                    <div *ngFor="let ev of event?.surveys.unknown">
+                        <p class="surveys__title">
+                            <mat-icon style="color: #9f9508;" aria-hidden="false" aria-label="Example logout icon">pending</mat-icon>
+                            {{ev.user.full_name}}
+                        </p>
+                    </div>
+                    <div *ngFor="let ev of event?.surveys.false">
+                        <p class="surveys__title">
+                            <mat-icon style="color: #9f0808;" aria-hidden="false" aria-label="Example logout icon">close</mat-icon>
+                            {{ev.user.full_name}}
+                        </p>
+                    </div>
+                </div>
+                <div *ngIf="list.guests">
+                    <div *ngFor="let guest of event?.guests">
+                        <p class="surveys__title">
+                            <mat-icon style="color: #089F5F;" aria-hidden="false" aria-label="Example logout icon">done</mat-icon>
+                            {{guest.name}}
+                        </p>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="box__surveys">
-            <p *ngIf="!isAuth" style="color: #788CA0; user-select: none; margin-bottom: 10px;">Чтобы проголосовать, войдите в систему</p>
-            <div class="box__btns" *ngIf="isAuth">
-                <button class="btn" style="background: #089F5F; margin-right: 10px;" *ngIf="answer == null" mat-raised-button (click)="sendTruePost()">Приду</button>
-                <button class="btn" style="background: #9f0808;" *ngIf="answer == null" mat-raised-button (click)="sendFalsePost()">Не приду</button>
 
-                <button class="btn" style="background: #089F5F;" *ngIf="answer == false" mat-raised-button (click)="sendTruePut()">Приду</button>
-                <button class="btn" style="background: #9f0808;" *ngIf="answer == true" mat-raised-button (click)="sendFalsePut()">Не приду</button>
-            </div>
-            <div>
-                <p class="subtitle">Опрос к событию</p>
-                <div *ngFor="let ev of event?.surveys.unknown">
-                    <p class="surveys__title">
-                        <mat-icon style="color: #9f9508;" aria-hidden="false" aria-label="Example logout icon">pending</mat-icon>
-                        {{ev.user.full_name}}
-                    </p>
-                </div>
-                <div *ngFor="let ev of event?.surveys.false">
-                    <p class="surveys__title">
-                        <mat-icon style="color: #9f0808;" aria-hidden="false" aria-label="Example logout icon">close</mat-icon>
-                        {{ev.user.full_name}}
-                    </p>
-                </div>
-            </div>
-            <br>
-            <div>
-                <p class="subtitle">Участники события</p>
-                <div *ngFor="let ev of event?.participants.confirmed">
-                    <p class="surveys__title">
-                        <mat-icon style="color: #089F5F;" aria-hidden="false" aria-label="Example logout icon">done</mat-icon>
-                        {{ev.player.user.full_name}}
-                    </p>
+        <div class="box__data">
+            <p class="subtitle">Комментарии</p>
+            <p *ngIf="!isAuth" class="dangerous">Чтобы написать комментарий, войдите в систему</p>
+            <form *ngIf="isAuth" [formGroup]="addCommentForm" (ngSubmit)="sendComment()">
+                <mat-form-field appearance="fill" class="textarea">
+                    <mat-label>Введите текст</mat-label>
+                    <textarea matInput
+                                cdkTextareaAutosize
+                                #autosize="cdkTextareaAutosize"
+                                cdkAutosizeMinRows="1"
+                                cdkAutosizeMaxRows="5"
+                                formControlName="comment"
+                                [(ngModel)]="text.comment"
+                                ></textarea>
+                </mat-form-field>
+                <button *ngIf="!isSend" class="icon__send" [disabled]="addCommentForm.invalid">
+                    <mat-icon style="color: #EEF5F8; margin-left: 20px;" aria-hidden="false" aria-label="Example send icon">send</mat-icon>
+                </button>
+                <button *ngIf="isSend" class="icon__send" type="button" (click)="sendChangeCommit()">
+                    <mat-icon style="color: #EEF5F8; margin-left: 20px;" aria-hidden="false" aria-label="Example send icon">done</mat-icon>
+                </button>
+                <button *ngIf="!isSend" class="btn__send" mat-raised-button>Отправить</button>
+                <button *ngIf="isSend" class="btn__send" type="button" (click)="sendChangeCommit()" mat-raised-button>Сохранить</button>
+            </form>
+            <p class="title__comment" (click)="openComment()">
+                <span *ngIf="!commentWindow">Открыть комментарии </span>
+                <span *ngIf="commentWindow">Закрыть комментарии </span>
+                <mat-icon *ngIf="!commentWindow" style="color: #EEF5F8; margin-left: 10px;" aria-hidden="false" aria-label="Example send icon">expand_more</mat-icon>
+                <mat-icon *ngIf="commentWindow" style="color: #EEF5F8; margin-left: 10px;" aria-hidden="false" aria-label="Example send icon">expand_less</mat-icon>
+            </p>
+            <div *ngIf="commentWindow">
+                <div *ngFor="let comment of comments?.results">
+                    <div class="box__comment" [matMenuTriggerFor]="menu" (click)="openMenu(comment)">
+                        <span class="user__comment" style="user-select: none;">{{comment.user.full_name}}</span>
+                        <p class="text__comment">{{comment.comment}} <span style="user-select: none;" class="time__comment">{{comment.created_at | date: 'HH:mm'}}</span></p>
+                    </div>
                 </div>
             </div>
         </div>
