change api, add telegram

--- a/src/app/main/components/about-us/about-us.component.html
+++ b/src/app/main/components/about-us/about-us.component.html
@@ -2,31 +2,39 @@
     <p class="title">О нас</p>
     <p class="subtitle">Каждый может найти свою команду</p>
 
-    <a href="https://www.instagram.com/free.team.club" target="_blank" class="insta_icon insta_box">
+    <a href="https://www.instagram.com/free.team.club" target="_blank" class="soc__icon insta_box">
         <img src="../../../../assets/img/instagram-brands.svg" alt="Instagram" height="20px" style="margin-right: 5px;">
         <p class="text">free.team.club</p>
     </a>
 
     <div class="box__cell">
-        <a class="cell" target="_blank" href="https://instagram.com/mr.marshanskiy">
+        <div class="cell">
             <div class="avatar__mr"></div>
             <div>
                 <p class="text">Николай Маршанский</p>
-                <div class="insta_icon">
+                <a class="soc__icon" target="_blank" href="https://instagram.com/mr.marshanskiy">
                     <img src="../../../../assets/img/instagram-brands.svg" alt="Instagram" height="16px" style="margin-right: 5px;">
                     <p class="link">mr.marshanskiy</p>
-                </div>
+                </a>
+                <a class="soc__icon" target="_blank" href="https://t.me/mrMarshanskiy">
+                    <img src="../../../../assets/img/telegram-plane-brands.svg" alt="Telegram" height="16px" style="margin-right: 5px;">
+                    <p class="link">mrMarshanskiy</p>
+                </a>
             </div>
-        </a>
-        <a class="cell" target="_blank" href="https://instagram.com/moskvitin.bg">
+        </div>
+        <div class="cell">
             <div class="avatar__bg"></div>
              <div>
                 <p class="text">Богдан Москвитин</p>
-                <div class="insta_icon">
+                <a class="soc__icon" target="_blank" href="https://instagram.com/moskvitin.bg">
                     <img src="../../../../assets/img/instagram-brands.svg" alt="Instagram" height="16px" style="margin-right: 5px;">
                     <p class="link">moskvitin.bg</p>
-                </div>
+                </a>
+                <a class="soc__icon" target="_blank" href="https://t.me/bogdan_moskvitin">
+                    <img src="../../../../assets/img/telegram-plane-brands.svg" alt="Telegram" height="16px" style="margin-right: 5px;">
+                    <p class="link">bogdan_moskvitin</p>
+                </a>
             </div>
-        </a>
+        </div>
     </div>
 </div>
