--- a/src/app/main/components/history/history.component.html
+++ b/src/app/main/components/history/history.component.html
@@ -26,7 +26,7 @@
             <td>{{event.time_end | date: 'dd.MM.YYYY HH:mm'}}</td>
             <td>{{event.location.name}}</td>
             <td>{{event.price}}</td>
-            <td>{{event.participants_count}}</td>
+            <td>{{event.applications_count}}</td>
             <td>{{event.status}}</td>
         </tr>
     </table>
@@ -41,7 +41,7 @@
             <div class="flex">
                 <p class="text" style="font-size: 18px;">{{event.location.name}}</p>
                 <p class="text" style="font-size: 18px;">{{event.price}}&#8381;</p>
-                <p class="text" style="font-size: 18px;">{{event.participants_count}}чел.</p>
+                <p class="text" style="font-size: 18px;">{{event.applications_count}}чел.</p>
             </div>
         </div>
     </div>
