--- a/src/app/main/components/home/home.component.html
+++ b/src/app/main/components/home/home.component.html
@@ -16,7 +16,7 @@
             <div class="flex">
                 <p class="text" style="font-size: 18px;">{{event.location.name}}</p>
                 <p class="text" style="font-size: 18px; color: #089F5F;">{{event.price}}&#8381;</p>
-                <p class="text" style="font-size: 18px;">{{event.participants_count}}чел.</p>
+                <p class="text" style="font-size: 18px;">{{event.applications_count}}чел.</p>
             </div>
         </div>
     </div>
