--- a/src/app/main/components/event/event.component.html
+++ b/src/app/main/components/event/event.component.html
@@ -39,34 +39,43 @@
             <div>
                 <p *ngIf="!isAuth" class="dangerous">Чтобы проголосовать, войдите в систему</p>
                 <div class="box__btns" *ngIf="isAuth">
-                    <button class="btn" style="background: #089F5F; margin-right: 10px;" *ngIf="answer == null" mat-raised-button (click)="sendTruePost()">Приду</button>
-                    <button class="btn" style="background: #9f0808;" *ngIf="answer == null" mat-raised-button (click)="sendFalsePost()">Не приду</button>
-    
-                    <button class="btn" style="background: #089F5F;" *ngIf="answer == false" mat-raised-button (click)="sendTruePut()">Приду</button>
-                    <button class="btn" style="background: #9f0808;" *ngIf="answer == true" mat-raised-button (click)="sendFalsePut()">Не приду</button>
+                    <button class="btn" *ngIf="!event?.app_status_on_moderation" style="background: #089F5F; margin-right: 10px;" mat-raised-button (click)="sendApplicationTrue()">Приду</button>
+                    <button class="btn" *ngIf="!event?.app_status_refused" style="background: #9f0808;" mat-raised-button (click)="sendApplicationFalse()">Не приду</button>
                 </div>
                 <div class="box__tabs">
-                    <p class="tab" [ngClass]="{active: list.participants}" mat-raised-button (click)="viewParticipants()">Участники ({{event?.participants.confirmed.length}})</p>
-                    <p class="tab" [ngClass]="{active: list.surveys}" mat-raised-button (click)="viewSurveys()">Не придут ({{event?.surveys.unknown.length + event?.surveys.false.length}})</p>
+                    <p class="tab" [ngClass]="{active: list.participants}" mat-raised-button (click)="viewParticipants()">Участники ({{event?.applications.accepted.length + event?.applications.on_moderation.length}})</p>
+                    <p class="tab" [ngClass]="{active: list.surveys}" mat-raised-button (click)="viewSurveys()">Не придут ({{event?.applications.refused.length}})</p>
                     <p class="tab" [ngClass]="{active: list.guests}" mat-raised-button (click)="viewGuests()">Гости ({{event?.guests_count}})</p>
                 </div>
 
                 <div *ngIf="list.participants">
-                    <div *ngFor="let ev of event?.participants.confirmed">
+                    <div *ngFor="let ev of event?.applications.accepted">
                         <p class="surveys__title">
                             <mat-icon style="color: #089F5F;" aria-hidden="false" aria-label="Example logout icon">done</mat-icon>
                             {{ev.player.user.full_name}}
                         </p>
                     </div>
-                </div>
-                <div *ngIf="list.surveys">
-                    <div *ngFor="let ev of event?.surveys.unknown">
+                    <div *ngFor="let ev of event?.applications.on_moderation">
                         <p class="surveys__title">
                             <mat-icon style="color: #9f9508;" aria-hidden="false" aria-label="Example logout icon">pending</mat-icon>
                             {{ev.user.full_name}}
                         </p>
                     </div>
-                    <div *ngFor="let ev of event?.surveys.false">
+                    <div *ngFor="let ev of event?.applications.invited">
+                        <p class="surveys__title">
+                            <mat-icon style="color: #9f9508;" aria-hidden="false" aria-label="Example logout icon">pending</mat-icon>
+                            {{ev.user.full_name}}
+                        </p>
+                    </div>
+                </div>
+                <div *ngIf="list.surveys">
+                    <div *ngFor="let ev of event?.applications.refused">
+                        <p class="surveys__title">
+                            <mat-icon style="color: #9f0808;" aria-hidden="false" aria-label="Example logout icon">close</mat-icon>
+                            {{ev.user.full_name}}
+                        </p>
+                    </div>
+                    <div *ngFor="let ev of event?.applications.rejected">
                         <p class="surveys__title">
                             <mat-icon style="color: #9f0808;" aria-hidden="false" aria-label="Example logout icon">close</mat-icon>
                             {{ev.user.full_name}}
@@ -85,7 +94,7 @@
         </div>
 
         <div class="box__data">
-            <p class="subtitle">Комментарии({{event?.comments_count}})</p>
+            <p class="subtitle">Комментарии({{comments?.count}})</p>
             <p *ngIf="!isAuth" class="dangerous">Чтобы написать комментарий, войдите в систему</p>
             <form *ngIf="isAuth" [formGroup]="addCommentForm" (ngSubmit)="sendComment()">
                 <mat-form-field appearance="fill" class="textarea">
@@ -96,17 +105,16 @@
                                 cdkAutosizeMinRows="1"
                                 cdkAutosizeMaxRows="5"
                                 formControlName="comment"
-                                [(ngModel)]="text.comment"
                                 ></textarea>
                 </mat-form-field>
                 <button *ngIf="!isSend" class="icon__send" [disabled]="addCommentForm.invalid">
                     <mat-icon style="color: #EEF5F8; margin-left: 20px;" aria-hidden="false" aria-label="Example send icon">send</mat-icon>
                 </button>
-                <button *ngIf="isSend" class="icon__send" type="button" (click)="sendChangeCommit()">
+                <button *ngIf="isSend" class="icon__send" type="button" (click)="sendChangeComment()">
                     <mat-icon style="color: #EEF5F8; margin-left: 20px;" aria-hidden="false" aria-label="Example send icon">done</mat-icon>
                 </button>
                 <button *ngIf="!isSend" class="btn__send" mat-raised-button>Отправить</button>
-                <button *ngIf="isSend" class="btn__send" type="button" (click)="sendChangeCommit()" mat-raised-button>Сохранить</button>
+                <button *ngIf="isSend" class="btn__send" type="button" (click)="sendChangeComment()" mat-raised-button>Сохранить</button>
             </form>
             <p class="title__comment" (click)="openComment()">
                 <span *ngIf="!commentWindow">Открыть комментарии </span>
@@ -114,8 +122,8 @@
                 <mat-icon *ngIf="!commentWindow" style="color: #EEF5F8; margin-left: 10px;" aria-hidden="false" aria-label="Example send icon">expand_more</mat-icon>
                 <mat-icon *ngIf="commentWindow" style="color: #EEF5F8; margin-left: 10px;" aria-hidden="false" aria-label="Example send icon">expand_less</mat-icon>
             </p>
-            <div *ngIf="commentWindow">
-                <div *ngFor="let comment of comments?.results">
+            <div *ngIf="commentWindow" class="container__comment">
+                <div *ngFor="let comment of comments?.results.slice().reverse()">
                     <div class="box__comment" [matMenuTriggerFor]="menu" (click)="openMenu(comment)">
                         <span class="user__comment" style="user-select: none;">{{comment.user.full_name}}</span>
                         <p class="text__comment">{{comment.comment}} <span style="user-select: none;" class="time__comment">{{comment.created_at | date: 'HH:mm'}}</span></p>
@@ -127,6 +135,6 @@
 </div>
 
 <mat-menu #menu="matMenu">
-    <button mat-raised-button style="width: 100%;" (click)="deleteCommit()">Удалить сообщение</button>
-    <button mat-raised-button style="width: 100%;" (click)="changeCommit()">Редактировать сообщение</button>
+    <button mat-raised-button style="width: 100%;" (click)="deleteComment()">Удалить сообщение</button>
+    <button mat-raised-button style="width: 100%;" (click)="changeComment()">Редактировать сообщение</button>
 </mat-menu>
