--- a/src/app/main/components/event/event.component.scss
+++ b/src/app/main/components/event/event.component.scss
@@ -30,14 +30,15 @@ $lightdark: #1C1C24;
     justify-content: space-between;
 }
 .text__title {
-    width: 200px;
+    width: 150px;
     font-size: 16px;
     color: $grey;
     padding: 5px 5px 5px 0;
     user-select: none;
 }
 .text__data {
-    width: 230px;
+    width: 250px;
+    margin-left: 10px;
     font-size: 16px;
     color: $light;
     padding: 5px 0;
@@ -65,6 +66,7 @@ $lightdark: #1C1C24;
     margin-right: 5px;
     color: $light;
     padding: 5px 0;
+    cursor: pointer;
 }
 .active {
     border-bottom: 2px solid $blue;
@@ -95,6 +97,7 @@ $lightdark: #1C1C24;
     display: none;
     width: 290px;
     margin: 0 0 10px 0;
+    background-color: $blue;
 }
 .title__comment {
     color: $light;
@@ -103,6 +106,11 @@ $lightdark: #1C1C24;
     cursor: pointer;
     justify-content: center;
     margin-bottom: 10px;
+}
+.container__comment {
+    max-height: 300px;
+    overflow: auto;
+    border-radius: 5px;
 }
 .box__comment {
     background-color: $grey;
