--- a/src/app/main/components/user/user.component.html
+++ b/src/app/main/components/user/user.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="head">
-        <p class="title">{{mydata.first_name}} {{mydata.last_name}}</p>
+        <p class="title">{{mydata.full_name}}</p>
         <button mat-raised-button class="btn" [routerLink]="['../user-change']">Изменить данные</button>
     </div>
     <div class="flex">
